src/objects/Support_and_Service__c.object
<CustomObject>
    <customHelpPage>Help_Supports_and_services</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(ISNULL(Service_End_Date__c ),
      Service_Start_Date__c &lt;= Today(), 
      AND( Service_Start_Date__c &lt;= Today(),  Service_End_Date__c &gt;= Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Support_and_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Non_government_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-government-service indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encrypted>true</encrypted>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <encrypted>true</encrypted>
        <label>Organization Providing Service/Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_End_Date_Reason__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>End Date Reason needs to be completed if you enter an end date.</inlineHelpText>
        <label>Service End Date Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Proposed Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Support_Type__c</fullName>
        <encrypted>true</encrypted>
        <label>Service / Support Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>IF( ISBLANK( Service_End_Date__c  ) , 
-1000000-(TODAY()- Service_Start_Date__c ), 
TODAY() -  Service_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Support and Service</label>
    <nameField>
        <displayFormat>SSL-{0000}</displayFormat>
        <label>Supports and Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supports and Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>Service end date should always be equal to or greater than the start date by definition</description>
        <errorConditionFormula>Service_Start_Date__c  &gt;  Service_End_Date__c</errorConditionFormula>
        <errorDisplayField>Service_End_Date__c</errorDisplayField>
        <errorMessage>Service End Date should always be equal to or greater than the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_requires_End_Date_Reason2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL( Service_End_Date__c )), ISBLANK( Service_End_Date_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Service_End_Date_Reason__c</errorDisplayField>
        <errorMessage>Please specify a reason for this end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_EDIT_permission_for_case_owner</fullName>
        <active>true</active>
        <description>**** 尊惡鑇撮鏞郗慉侶퓑&amp;\\ \ 升鞭큢貵螴柅릮머헖&amp;\䷀\ ䷀608!!.</description>
        <errorConditionFormula>AND((Case__r.OwnerId = $User.Id) &amp;&amp;(Case__r.Owner:User.Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; Case__r.Owner:User.Profile.Name &lt;&gt; &quot;STADD Director&quot; &amp;&amp; Case__r.Owner:User.Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot; &amp;&amp; Case__r.OwnerId&lt;&gt;CreatedById), OR ( ISCHANGED(Non_government_service__c) ,ISCHANGED( Provider__c ),ISCHANGED( Service_Start_Date__c),ISCHANGED( Service_Support_Type__c)))</errorConditionFormula>
        <errorMessage>The case owner can only edit Contact Name, Contact Phone number, End date, End date reason and Notes fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>**息펉觤髢끬鑈&amp;\\ 404!.</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;,
CreatedById &lt;&gt; $User.Id, 
Case__r.OwnerId &lt;&gt; $User.Id  
)</errorConditionFormula>
        <errorMessage>Only the record creator or the case owner or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>